# django_faker_admin

./: .buildinfo  LICENSE  Makefile  README.md  admin.html  configuration.html  genindex.html  getting_started.html  index.html  installation.html  notes.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  templates.html  views.html
.doctrees/: admin.doctree  configuration.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree  notes.doctree  templates.doctree  views.doctree
.github/workflows/: deploy_docs.yml  deploy_pypi.yml  run_tests.yml
_modules/: index.html
_modules/django_faker_admin/: mixins.html  views.html
_sources/: admin.rst.txt  configuration.rst.txt  getting_started.rst.txt  notes.rst.txt  templates.rst.txt  views.rst.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
src/django_faker_admin/: __init__.py  apps.py  checks.py  conf.py  mixins.py  views.py
src/django_faker_admin/templates/admin/: faker_admin.html  faker_admin_change_list.html  faker_change_list_object_tools.html
tests/: conftest.py  requirements.txt  test_checks.py  test_conf.py  test_model_admin.py  test_views.py  testproject_settings.py
tests/testapp/: admin.py  factory.py
tests/testapp/migrations/: 0001_initial.py
