[build-system]
requires = ["setuptools>=75.8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "django_faker_admin"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "Django>=5.2",
    "factory_boy>=3.3.3",
    "Faker>=37.1.0"
]
authors = [
  {name = "M.Gamal", email = "moha.gamal@nu.edu.eg"},
]
description = "Django package that offers custom admin page to generate dummy data using faker."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mohamedgamalmoha/django_faker_admin"
Documentation = "https://github.com/mohamedgamalmoha/django_faker_admin"
Source = "https://github.com/mohamedgamalmoha/django_faker_admin"

[project.optional-dependencies]
test = [
    "Django>=5.2",
    "factory_boy>=3.3.3",
    "Faker>=37.1.0",
    "pytest==8.3.5",
    "beautifulsoup4==4.13.4"
]
